AudioRendererSinKCache: Do not use unhealthy sinks

Cache an unused sink only if it is healthy (has an OK status);
Get output parameters only from healthy cached sinks.

Note that we still can have used sinks in the cache those become unhealthy.

BUG=668250,663546

Review-Url: https://codereview.chromium.org/2533443003
Cr-Commit-Position: refs/heads/master@{#435937}

Former-commit-id: 3e07bf0ac5733215f2b670b42d4cbf90037ea673